--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,21 +4,11 @@
     <application
         android:allowBackup="true"
         android:theme="@style/Theme.HungerRelief"
-        android:usesCleartextTraffic="true"
         android:label="HungerRelief"
-        android:icon="@mipmap/ic_launcher">
+        android:usesCleartextTraffic="true">
 
-        <activity android:name=".LoginActivity"
-            android:exported="true" />
-
-        <activity android:name=".FoodListActivity"
-            android:exported="true" />
-
-        <activity android:name=".FoodFormActivity"
-            android:exported="true" />
-
-        <activity
-            android:name=".MainActivity"
+        <!-- MainActivity (Launcher) -->
+        <activity android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,6 +16,13 @@
             </intent-filter>
         </activity>
 
+        <!-- Login and Signup Activities -->
+        <activity android:name=".LoginActivity" android:exported="true"/>
+        <activity android:name=".SignupActivity" android:exported="true"/>
+
+        <!-- Food Donation & List Activities -->
+        <activity android:name=".FoodListActivity" android:exported="true"/>
+        <activity android:name=".FoodFormActivity" android:exported="true"/>
     </application>
 
 </manifest>
